# beat_fulfillment_rate_calculation

./: main.py  pyproject.toml
